Fix internal declaration of _gcry_kdf_compute.

* src/gcrypt-int.h (_gcry_kdf_compute): Return gcry_err_code_t.

--

Cherry-pick master commit of:
	4019f1a66b15d2ef82eb059c432e6b09b2c69b21

GnuPG-bug-id: 5980
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>